# pj-bridge

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi-release.yml
src/pj_bridge/: bridge.py  can_fd_parser.py  derive_struct.py  socket_client.py  stream_parser.py  tcp_parser.py
