[project]
name = "pj-bridge"
version = "0.1.0"
description = "Bridge a delimiter-framed TCP binary stream into JSON over WebSocket for PlotJuggler."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Carlos" }]
license = { text = "MIT" }

dependencies = [
  "websockets>=12.0,<14.0",
]

[project.optional-dependencies]
dev = [
  # Tooling
  "pre-commit>=4.3.0",
  "ruff>=0.6.5",
  "black>=24.8.0",
  "isort>=5.13.2",
  "mypy>=1.10.0",
  "bandit>=1.7.9",
  # Types for mypy (optional)
  "types-requests",
  "types-setuptools",
  # Tests (optional)
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  # Manual upgrade/lock tool
  "uv>=0.4"
]

[project.scripts]
pj-bridge = "bridge:main"
tcp-parser = "tcp_parser:main"
socket-client = "socket_client:main"
derive-struct = "derive_struct:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
